unpackaged/main/default/objects/TSSurvey__c/TSSurvey__c.object-meta.xml
<CustomObject>
    <description>Houses Clicktools and GetFeedback survey responses</description>
    <label>TSSurvey</label>
    <nameField>
        <label>TSSurvey</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TSSurvey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>