unpackaged/main/default/objects/TSSurvey__c/fields/Account_GUID__c.field-meta.xml
<CustomField>
    <fullName>Account_GUID__c</fullName>
    <label>Account GUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>