unpackaged/main/default/objects/TSSurvey__c/fields/Additional_Comment_in_regards_to_support__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment_in_regards_to_support__c</fullName>
    <inlineHelpText>Please provide us with any additional comments/suggestions you might have regarding Brightcove Technical Support.</inlineHelpText>
    <label>Additional Comment in regards to support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>