unpackaged/main/default/objects/TSSurvey__c/fields/Additional_comments_about_this_topic__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_about_this_topic__c</fullName>
    <label>Additional comments about this topic</label>
    <length>250</length>
    <type>Text</type>
</CustomField>