unpackaged/main/default/objects/TSSurvey__c/fields/AHC_Ad_Tech_Manager_Communication__c.field-meta.xml
<CustomField>
    <fullName>AHC_Ad_Tech_Manager_Communication__c</fullName>
    <description>Ad Tech Manager effectively communicated ways that we could improve our use of the advertising features/settings (1 being Poor and 10 being Excellent)</description>
    <inlineHelpText>Ad Tech Manager effectively communicated ways that we could improve our use of the advertising features/settings (1 being Poor and 10 being Excellent)</inlineHelpText>
    <label>AHC Ad Tech Manager Communication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>