unpackaged/main/default/objects/TSSurvey__c/fields/AHC_Ad_Tech_Manager_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>AHC_Ad_Tech_Manager_Knowledge__c</fullName>
    <description>Ad Tech Manager was well informed and knowledgeable (1 being Poor and 10 being Excellent)</description>
    <inlineHelpText>Ad Tech Manager was well informed and knowledgeable (1 being Poor and 10 being Excellent)</inlineHelpText>
    <label>AHC Ad Tech Manager Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>