unpackaged/main/default/objects/TSSurvey__c/fields/AHC_Ad_Tech_Manager_Understand_Goals__c.field-meta.xml
<CustomField>
    <fullName>AHC_Ad_Tech_Manager_Understand_Goals__c</fullName>
    <description>Ad Tech Manager was able to understand our company&#39;s monetization goals and priorities (1 being Poor and 10 being Excellent)</description>
    <inlineHelpText>Ad Tech Manager was able to understand our company&#39;s monetization goals and priorities (1 being Poor and 10 being Excellent)</inlineHelpText>
    <label>AHC Ad Tech Manager Understand Goals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>