unpackaged/main/default/objects/TSSurvey__c/fields/AHC_Learn_Something_New__c.field-meta.xml
<CustomField>
    <fullName>AHC_Learn_Something_New__c</fullName>
    <description>Did you learn something new that you did not know prior to the Ad Health Check?</description>
    <inlineHelpText>Did you learn something new that you did not know prior to the Ad Health Check?</inlineHelpText>
    <label>AHC Learn Something New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>