unpackaged/main/default/objects/TSSurvey__c/fields/AHC_Rate_Ad_Techs_recommendations__c.field-meta.xml
<CustomField>
    <fullName>AHC_Rate_Ad_Techs_recommendations__c</fullName>
    <description>Do you feel that the Ad Tech Manager was able recommend best practices and suggest ways to optimize your use of Brightcove&#39;s advertising features and performance? (1 being Strongly Disagree, 10 being Strongly Agree)</description>
    <inlineHelpText>Do you feel that the Ad Tech Manager was able recommend best practices and suggest ways to optimize your use of Brightcove&#39;s advertising features and performance? (1 being Strongly Disagree, 10 being Strongly Agree)</inlineHelpText>
    <label>AHC Rate Ad Techs recommendations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>