unpackaged/main/default/objects/TSSurvey__c/fields/Article_URL__c.field-meta.xml
<CustomField>
    <fullName>Article_URL__c</fullName>
    <label>Article URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>