unpackaged/main/default/objects/TSSurvey__c/fields/BCU_Survey_Email__c.field-meta.xml
<CustomField>
    <fullName>BCU_Survey_Email__c</fullName>
    <label>BCU Survey Email</label>
    <type>Email</type>
</CustomField>