unpackaged/main/default/objects/TSSurvey__c/fields/BCU_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>BCU_Survey_Response__c</fullName>
    <label>BCU Survey Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>