unpackaged/main/default/objects/TSSurvey__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <formula>Case__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>