unpackaged/main/default/objects/TSSurvey__c/fields/CM_Documentation_heplful__c.field-meta.xml
<CustomField>
    <fullName>CM_Documentation_heplful__c</fullName>
    <description>KM:  Content Migration survey pushed from ClickTools</description>
    <inlineHelpText>Do you feel you the documentation provided by your Onboarding Engagement Manager was helpful?</inlineHelpText>
    <label>CM Documentation heplful</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>