unpackaged/main/default/objects/TSSurvey__c/fields/CM_OEM_communicated_progress_effectively__c.field-meta.xml
<CustomField>
    <fullName>CM_OEM_communicated_progress_effectively__c</fullName>
    <description>KM:  Content Migration survey pushed from ClickTools</description>
    <inlineHelpText>How would you rate the following for your Content Migration Project:
Onboarding Engagment Manager communicated the progress of my project as often as I expected</inlineHelpText>
    <label>CM OEM communicated progress effectively</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>