unpackaged/main/default/objects/TSSurvey__c/fields/CM_OEM_efficiently_migrated_assets__c.field-meta.xml
<CustomField>
    <fullName>CM_OEM_efficiently_migrated_assets__c</fullName>
    <description>KM:  Content Migration survey pushed from ClickTools</description>
    <inlineHelpText>Do you feel that your Onboarding Engagement Manager was able to efficiently migrate your video assets from their original source to Brightcove&#39;s Video Cloud?</inlineHelpText>
    <label>CM OEM efficiently migrated assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>