unpackaged/main/default/objects/TSSurvey__c/fields/CM_OEM_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>CM_OEM_knowledgeable__c</fullName>
    <description>KM:  Content Migration survey pushed from ClickTools</description>
    <inlineHelpText>How would you rate the following for your Content Migration Project:
Onboarding Engagement Manager was well informed and knowledgeable about the migration process</inlineHelpText>
    <label>CM OEM knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>