unpackaged/main/default/objects/TSSurvey__c/fields/CM_Project_completed_on_time__c.field-meta.xml
<CustomField>
    <fullName>CM_Project_completed_on_time__c</fullName>
    <description>KM:  Content Migration survey pushed from ClickTools</description>
    <inlineHelpText>How would you rate the following for your Content Migration Project:
Project was completed on time</inlineHelpText>
    <label>CM Project completed on time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>