unpackaged/main/default/objects/TSSurvey__c/fields/CM_Project_managed_effectively__c.field-meta.xml
<CustomField>
    <fullName>CM_Project_managed_effectively__c</fullName>
    <description>KM:  Content Migration survey pushed from ClickTools</description>
    <inlineHelpText>How would you rate the following for your Content Migration Project:
Project was managed effectively</inlineHelpText>
    <label>CM Project managed effectively</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>