unpackaged/main/default/objects/TSSurvey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>