unpackaged/main/default/objects/TSSurvey__c/fields/Contact_GUID__c.field-meta.xml
<CustomField>
    <fullName>Contact_GUID__c</fullName>
    <label>Contact GUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>