unpackaged/main/default/objects/TSSurvey__c/fields/CS_How_Likely_to_recommend__c.field-meta.xml
<CustomField>
    <fullName>CS_How_Likely_to_recommend__c</fullName>
    <inlineHelpText>How likely are you to recommend the Brightcove Health Check Program/POP/Migration to a friend or colleague?</inlineHelpText>
    <label>CS How Likely to recommend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>