unpackaged/main/default/objects/TSSurvey__c/fields/CS_OEM__c.field-meta.xml
<CustomField>
    <fullName>CS_OEM__c</fullName>
    <description>KM:  To capture which OEM was assigned to the engagement that is being surveyed.</description>
    <label>CS OEM</label>
    <length>70</length>
    <type>Text</type>
</CustomField>