unpackaged/main/default/objects/TSSurvey__c/fields/CS_OEM_Email__c.field-meta.xml
<CustomField>
    <fullName>CS_OEM_Email__c</fullName>
    <description>KM:  To capture the CS rep (OEM or CSM) email address so an alert can be sent to them when a Survey is submitted by one of their customers.</description>
    <label>CS OEM Email</label>
    <type>Email</type>
</CustomField>