unpackaged/main/default/objects/TSSurvey__c/fields/CS_Rating__c.field-meta.xml
<CustomField>
    <fullName>CS_Rating__c</fullName>
    <inlineHelpText>Overall, how would you rate the Brightcove Health Check Program or POP or Migration?</inlineHelpText>
    <label>CS Overall Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>