unpackaged/main/default/objects/TSSurvey__c/fields/Date_Case_was_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_was_Closed__c</fullName>
    <label>Date Case was Closed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>