unpackaged/main/default/objects/TSSurvey__c/fields/Date_survey_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_survey_submitted__c</fullName>
    <inlineHelpText>Houses the date the survey was submitted</inlineHelpText>
    <label>Date survey submitted</label>
    <type>Date</type>
</CustomField>