unpackaged/main/default/objects/TSSurvey__c/fields/Did_this_topic_answer_you_question__c.field-meta.xml
<CustomField>
    <fullName>Did_this_topic_answer_you_question__c</fullName>
    <label>Did this topic answer you question?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>