unpackaged/main/default/objects/TSSurvey__c/fields/Did_we_make_it_easy__c.field-meta.xml
<CustomField>
    <fullName>Did_we_make_it_easy__c</fullName>
    <description>This field measure the customer effort</description>
    <inlineHelpText>How easy did we make it for you to handle this issue?</inlineHelpText>
    <label>Did we make it easy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>