unpackaged/main/default/objects/TSSurvey__c/fields/Did_you_visit_our_documentation__c.field-meta.xml
<CustomField>
    <fullName>Did_you_visit_our_documentation__c</fullName>
    <description>Before contacting us, did you visit our public documentation?</description>
    <label>Did you visit our documentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>