unpackaged/main/default/objects/TSSurvey__c/fields/Effectiveness_of_resolution_of_case__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_of_resolution_of_case__c</fullName>
    <inlineHelpText>How would you rate your satisfaction for the effectiveness or completeness of the resolution of your case(s)?</inlineHelpText>
    <label>Effectiveness of resolution of case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>