unpackaged/main/default/objects/TSSurvey__c/fields/Email_Of_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Email_Of_Submitter__c</fullName>
    <formula>Contact__r.Email</formula>
    <label>Email Of Submitter</label>
    <type>Text</type>
</CustomField>