unpackaged/main/default/objects/TSSurvey__c/fields/First_Contact_Age__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Age__c</fullName>
    <formula>IF(NOT(First_Contact_Completed__c ), TODAY() - Date_survey_submitted__c ,   DATEVALUE(First_Contact_Complete_date__c)  - Date_survey_submitted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Contact Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>