unpackaged/main/default/objects/TSSurvey__c/fields/First_Contact_Complete_date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Complete_date__c</fullName>
    <description>Automatically added when the checkbox is marked true</description>
    <inlineHelpText>Automatically added when the checkbox is marked true</inlineHelpText>
    <label>First Contact Complete Date</label>
    <type>DateTime</type>
</CustomField>