unpackaged/main/default/objects/TSSurvey__c/fields/First_Contact_Completed__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when the Manager has contacted the customer to follow up on a low survey feedback</description>
    <inlineHelpText>Check when the Manager has contacted the customer to follow up on a low survey feedback</inlineHelpText>
    <label>Low Survey First Contact Completed</label>
    <type>Checkbox</type>
</CustomField>