unpackaged/main/default/objects/TSSurvey__c/fields/Follow_up_Age__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Age__c</fullName>
    <description>Contains follow up age in Days.</description>
    <formula>IF(NOT(Follow_up_complete__c), TODAY() - Date_survey_submitted__c , Follow_up_complete_date__c - Date_survey_submitted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contains follow up age in Days.</inlineHelpText>
    <label>Follow-up Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>