unpackaged/main/default/objects/TSSurvey__c/fields/Follow_up_complete__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when you have completed the follow-up that was required for this survey response</inlineHelpText>
    <label>Follow-up complete?</label>
    <type>Checkbox</type>
</CustomField>