unpackaged/main/default/objects/TSSurvey__c/fields/Follow_up_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Type__c</fullName>
    <inlineHelpText>What type of follow-up is required for this survey?</inlineHelpText>
    <label>Follow-up Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Call</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Customer Call &amp; Coaching</fullName>
            </value>
            <value>
                <fullName>Internal Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>