unpackaged/main/default/objects/TSSurvey__c/fields/HC_CSM_effectively_communicated__c.field-meta.xml
<CustomField>
    <fullName>HC_CSM_effectively_communicated__c</fullName>
    <description>KM:  Health Check survey pushed from ClickTools</description>
    <inlineHelpText>How would you rate the following:
Customer Success Manager effectively communicated ways that we could improve our integration.</inlineHelpText>
    <label>HC CSM effectively communicated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>