unpackaged/main/default/objects/TSSurvey__c/fields/HC_CSM_identified_optimizations__c.field-meta.xml
<CustomField>
    <fullName>HC_CSM_identified_optimizations__c</fullName>
    <description>KM:  Health Check survey pushed from ClickTools</description>
    <inlineHelpText>How would you rate the following:
Customer Success Manager identified ways that we could optimize our use.</inlineHelpText>
    <label>HC CSM identified optimizations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>