unpackaged/main/default/objects/TSSurvey__c/fields/HC_CSM_informed_and_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>HC_CSM_informed_and_knowledgeable__c</fullName>
    <description>KM:  Health Check survey pushed from ClickTools</description>
    <inlineHelpText>How would you rate the following:
Customer Success Manager was well informed and knowledgeable.</inlineHelpText>
    <label>HC CSM informed and knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>