unpackaged/main/default/objects/TSSurvey__c/fields/HC_CSM_understood_goals_and_priorities__c.field-meta.xml
<CustomField>
    <fullName>HC_CSM_understood_goals_and_priorities__c</fullName>
    <description>KM:  Health Check survey pushed from ClickTools</description>
    <inlineHelpText>How would you rate the following:
Customer Success Manager was able to understand our company&#39;s goals and priorities.</inlineHelpText>
    <label>HC CSM understood goals and priorities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>