unpackaged/main/default/objects/TSSurvey__c/fields/HC_Customer_in_better_position__c.field-meta.xml
<CustomField>
    <fullName>HC_Customer_in_better_position__c</fullName>
    <description>KM:  Health Check survey pushed from ClickTools</description>
    <inlineHelpText>Because of this program, I am in a better position to achieve my digital content strategy.</inlineHelpText>
    <label>HC Customer in better position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>