unpackaged/main/default/objects/TSSurvey__c/fields/HC_Customer_learned_something_new__c.field-meta.xml
<CustomField>
    <fullName>HC_Customer_learned_something_new__c</fullName>
    <description>KM:  Health Check survey pushed from ClickTools</description>
    <inlineHelpText>Did you learn something new you did not know prior to the Health Check?</inlineHelpText>
    <label>HC Customer learned something new</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>