unpackaged/main/default/objects/TSSurvey__c/fields/HC_output_report_informative__c.field-meta.xml
<CustomField>
    <fullName>HC_output_report_informative__c</fullName>
    <description>KM:  Health Check survey pushed from ClickTools</description>
    <inlineHelpText>How would you rate the following:
The output report was informative and easily understood.</inlineHelpText>
    <label>HC output report informative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>