unpackaged/main/default/objects/TSSurvey__c/fields/How_likely_to_recommend_Brightcove__c.field-meta.xml
<CustomField>
    <fullName>How_likely_to_recommend_Brightcove__c</fullName>
    <inlineHelpText>Based on your customer support experience, how likely is it that you would recommend Brightcove to a friend or a colleague?</inlineHelpText>
    <label>How likely to recommend Brightcove</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>