unpackaged/main/default/objects/TSSurvey__c/fields/KeyMigration__c.field-meta.xml
<CustomField>
    <fullName>KeyMigration__c</fullName>
    <label>KeyMigration</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>