unpackaged/main/default/objects/TSSurvey__c/fields/Legacy_CaseOwner__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CaseOwner__c</fullName>
    <label>Legacy CaseOwner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>