unpackaged/main/default/objects/TSSurvey__c/fields/Legacy_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contact_Email__c</fullName>
    <label>Legacy Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>