unpackaged/main/default/objects/TSSurvey__c/fields/Ooyala_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Ooyala_Case_ID__c</fullName>
    <description>To import OO Surveys into BC Surveys</description>
    <externalId>true</externalId>
    <label>Ooyala Case ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>