unpackaged/main/default/objects/TSSurvey__c/fields/Overall_Satisfaction_with_support__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_with_support__c</fullName>
    <inlineHelpText>What is your overall satisfaction with Brightcove Support?</inlineHelpText>
    <label>Overall Satisfaction with support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>