unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_Comments__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Comments__c</fullName>
    <label>Platinum - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>