unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_Our_ability_to_understand_you__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Our_ability_to_understand_you__c</fullName>
    <label>Platinum - Our ability to understand you</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>