unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_Our_response_time__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Our_response_time__c</fullName>
    <label>Platinum - Our response time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>