unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_Our_technical_ability__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Our_technical_ability__c</fullName>
    <label>Platinum - Our technical ability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>