unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_Overall_Satisfaction_with_Sup__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Overall_Satisfaction_with_Sup__c</fullName>
    <label>Platinum - Overall Satisfaction with Sup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>