unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_Program_value__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Program_value__c</fullName>
    <label>Platinum - Program value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>