unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_Reference_Program__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Reference_Program__c</fullName>
    <label>Platinum - Reference Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>