unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_The_frequency_of_reports__c.field-meta.xml
<CustomField>
    <fullName>Platinum_The_frequency_of_reports__c</fullName>
    <label>Platinum - The frequency of reports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>