unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_Willing_to_be_contacted__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Willing_to_be_contacted__c</fullName>
    <label>Platinum - Willing to be contacted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>