unpackaged/main/default/objects/TSSurvey__c/fields/Platinum_Would_you_recommend__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Would_you_recommend__c</fullName>
    <label>Platinum - Would you recommend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>