unpackaged/main/default/objects/TSSurvey__c/fields/POP_comfortable_managing_the_studio__c.field-meta.xml
<CustomField>
    <fullName>POP_comfortable_managing_the_studio__c</fullName>
    <description>KM:  POP survey pushed from ClickTools</description>
    <inlineHelpText>After the Brightcove (POP) Publisher Onboarding Program, how would you rate the level of knowledge and understanding you now have for each of the topics below?
Managing the Video Cloud Studio</inlineHelpText>
    <label>POP comfortable managing the studio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>